--- a/assignments/assets/style/day3lay3.css
+++ b/assignments/assets/style/day3lay3.css
@@ -1,98 +1,163 @@
+/* http://meyerweb.com/eric/tools/css/reset/ 2. v2.0 | 20110126
+  License: none (public domain)
+*/
+
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure,
+footer, header, hgroup, menu, nav, section {
+  display: block;
+}
+body {
+  line-height: 1;
+}
+ol, ul {
+  list-style: none;
+}
+blockquote, q {
+  quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+  content: '';
+  content: none;
+}
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+
 .container {
-	background-color: gray;
-	height: 840px;
-	width: 1300px;
-	margin: 100px;
-	padding-left: 140px ;
+	background-color: white;
+	height: 900px;
+	width: 1600px;
+	margin: 0 auto;
+	margin-top: 20px;
+	padding-left: 0px ;
 }	
 .box1 {
+	margin: 2%;
 	display: inline-block;
 	background-color: #E74C3C;
-	height: 200px;
-	width: 500px;
-	margin: 20px;
-	padding: 40px 0px 0px 40px;
+	height: 250px;
+	width: 46%;
+	padding: 60px;
 	color: white;
 	font-size: 25px;
+	box-sizing: border-box;
 }
 .box2 {
+	margin: 0%;
 	display: inline-block;
 	background-color: #16A085;
-	height: 200px;
-	width: 200px;
-	margin: 20px;
-	padding: 40px 0px 0px 40px;
+	height: 250px;
+	width: 23%;
+	padding: 60px;
 	color: white;
 	font-size: 25px;
+	box-sizing: border-box;
 
 }
 .box3 {
+	margin: 2%;
 	display: inline-block;
 	background-color: #A569BD;
-	height: 200px;
-	width: 200px;
-	margin: 20px;
-	padding: 40px 0px 0px 40px;
+	height: 250px;
+	width: 23%;
+	padding: 60px;
 	color: white;
 	font-size: 25px;
+	box-sizing: border-box;
 }
 .box4 {
+	margin-top: 0%;
+	margin-bottom: 0%;
+	margin-left: 2%;
 	display: inline-block;
 	background-color: #5DADE2;
-	height: 200px;
-	width: 200px;
-	margin: 20px;
-	padding: 40px 0px 0px 40px;
+	height: 250px;
+	width: 23%;
+	padding: 60px;
 	color: white;
 	font-size: 25px;
+	box-sizing: border-box;
 	
 }
 .box5 {
+	margin-top: 0%;
+	margin-bottom: 0%;
+	margin-left: 2%;
 	display: inline-block;
 	background-color: #52BE80;
-	height: 200px;
-	width: 500px;
-	margin: 20px;
-	padding: 40px 0px 0px 40px;
+	height: 250px;
+	width: 46%;
+	padding: 60px;
 	color: white;
 	font-size: 25px;
+	box-sizing: border-box;
 }
 .box6 {
+	margin-top: 0%;
+	margin-bottom: 0%;
+	margin-left: 2%;
 	display: inline-block;
 	background-color: #82E0AA;
-	height: 200px;
-	width: 200px;
-	margin: 20px;
-	padding: 40px 0px 0px 40px;
+	height: 250px;
+	width: 23%;
+	padding: 60px;
 	color: white;
 	font-size: 25px;
+	box-sizing: border-box;
 }
 .box7 {
+	margin: 2%;
 	display: inline-block;
 	background-color: #FFFF00;
-	height: 200px;
-	width: 200px;
-	margin: 20px;
-	padding: 40px 0px 0px 40px;
+	height: 250px;
+	width: 23%;
+	padding: 60px;
 	color: white;
 	font-size: 25px;
-}.box8 {
+	box-sizing: border-box;
+}
+.box8 {
+	margin: 0%;
 	display: inline-block;
 	background-color: #FF8A65;
-	height: 200px;
-	width: 200px;
-	margin: 20px;
-	padding: 40px 0px 0px 40px;
+	height: 250px;
+	width: 23%;
+	padding: 60px;
 	color: white;
 	font-size: 25px;
+	box-sizing: border-box;
 }
 .box9 {
+	margin: 2%;
 	display: inline-block;
 	background-color: #C0392B;
-	height: 200px;
-	width: 500px;
-	margin: 20px;
-	padding: 40px 0px 0px 40px;
+	height: 250px;
+	width: 46%;
+	padding: 60px;
 	color: white;
 	font-size: 25px;
+	box-sizing: border-box;
 }
