--- a/assignments/assets/style/day3lay4.css
+++ b/assignments/assets/style/day3lay4.css
@@ -1,22 +1,78 @@
-/*   css   */
+/* http://meyerweb.com/eric/tools/css/reset/ 2. v2.0 | 20110126
+  License: none (public domain)
+*/
+
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure,
+footer, header, hgroup, menu, nav, section {
+  display: block;
+}
+body {
+  line-height: 1;
+}
+ol, ul {
+  list-style: none;
+}
+blockquote, q {
+  quotes: none;
+}
+
+blockquote:before, blockquote:after,
+q:before, q:after {
+  content: '';
+  content: none;
+}
+
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+
+
+		/*   css   */
 .page {
 	background-color: lightgray;
 	height: 900px;
 	width: 1600px;
-	margin: 20px;
+	margin: 10px auto;
 
 }
+
+
+		/*outer box*/
+
+
 .box {
 	display: block;
 	background-color: purple;
 	height: 630px;
 	width: 500px;
-	margin: 0px;
-	padding-left: 10px;
-	padding-top: 10px;
-	padding-right: 10px;
-	padding-bottom: 10px;
+	padding: 10px 10px 0px 10px;
 }
+
+		/*midle box*/
+
+
 .box1 {
 	display: block;
 	height: 530px;
@@ -27,13 +83,13 @@
 	border-right: 20px solid gray;
 	border-bottom: 20px solid yellow;
 	border-left: 20px solid green;
-	margin-left: 20px;
-	margin-top: 20px;
-	margin-right: 20px;
-	margin-bottom: 20px;
-	padding-top: 20px;
-	padding-left: 20px;
-	padding-right: 20px;
-	padding-bottom: 0px;
+	margin: 20px;
 	text-align: left;
+}
+
+		/*paragraph*/
+
+
+p {
+	margin: 20px;
 }
