--- a/assignments/assets/style/day3lay5.css
+++ b/assignments/assets/style/day3lay5.css
@@ -1,12 +1,57 @@
+/* http://meyerweb.com/eric/tools/css/reset/ 2. v2.0 | 20110126
+  License: none (public domain)
+*/
+
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure,
+footer, header, hgroup, menu, nav, section {
+  display: block;
+}
+body {
+  line-height: 1;
+}
+ol, ul {
+  list-style: none;
+}
+blockquote, q {
+  quotes: none;
+}
+
+blockquote:before, blockquote:after,
+q:before, q:after {
+  content: '';
+  content: none;
+}
+
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
 /*   css  */
 .page {
 	background-color: gray;
-	height: 800px;
 	width: 1300px;
-	margin-top: 100px;
-	margin-left: 100px;
-	align-content: center;
-	padding-top: 30px;
+	margin:20px auto;
 }
 .h1 {
 	text-align: center;
@@ -16,14 +61,11 @@
 	background-color: lightcoral;
 	height: 400px;
 	width: 400px;
-	margin-left: 400px;
-	margin-top: 50px;
-	margin-bottom: 00px;
+	/*margin-left: 400px;
+	margin-top: 50px;*/
+	margin: 50px auto;
 	align-content: center;
-	padding-top: 3px;
-	padding-right: 60px;
-	padding-bottom: 90px;
-	padding-left: 2px;
+	padding: 3px 60px 90px 2px;
 }
 .box2 {
 	background-color: black;
