--- a/assignments/assets/style/day3layout2.css
+++ b/assignments/assets/style/day3layout2.css
@@ -1,120 +1,130 @@
+/* http://meyerweb.com/eric/tools/css/reset/ 2. v2.0 | 20110126
+  License: none (public domain)
+*/
+
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure,
+footer, header, hgroup, menu, nav, section {
+  display: block;
+}
+body {
+  line-height: 1;
+}
+ol, ul {
+  list-style: none;
+}
+blockquote, q {
+  quotes: none;
+}
+
+blockquote:before, blockquote:after,
+q:before, q:after {
+  content: '';
+  content: none;
+}
+
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+
+      /*body of the layout*/
+
+.page {
+  /*width: 1600px;*/
+  /*height: 1000px;*/
+  /*margin: 0 auto;*/
+  /*background-color: white;*/
+}
+
 h5 {
 	text-align: center;
 	color: black;
+  padding-bottom: 30px;
 }
-.container1 {
-	background:;
-	height:150px;
-	width: 300px
-	padding:0px ;
-  	margin:0px 500px 20px 500px;
+
+      /*all containers*/
+
+
+.container {
+	background:white;
+	/*height:150px;*/
+  width: 600px;
+  margin: 0 auto;
 	border: 2px solid black;
 }
-.box1 {
-  	display:inline-block;
-    text-align:center;
-  	background:gray;
-  	height:100px;
-  	width:150px;
-  	padding:  ;
-  	margin: 20px 40px 30px 40px;
-}
-.box2 {
-  	display:inline-block;
-    text-align:center;
-  	background:gray;
-  	height:100px;
-  	width:150px;
-  	padding:  ;
-  	margin: 20px 40px 30px 20px;
-}
-.box3 {
-  	display:inline-block;
-    text-align:center;
-  	background:gray;
-  	height:100px;
-  	width:150px;
-  	padding:  ;
-  	margin: 20px 40px 30px 20px;
-  	
-  }
-  .container2 {
-	background:;
-	height:350px;
-	width: 300px
-	padding:0px ;
-  	margin:0px 500px 20px 500px;
-	border: 2px solid black;
 
-}
-.box4 {
+    /*all boxes*/
+
+
+.box {
   	display:inline-block;
     text-align:center;
   	background:gray;
   	height:100px;
-  	width:150px;
-  	padding:  ;
-  	margin: 20px 40px 30px 40px;
-  	border: 10px solid black;
+  	width:160px;
+  	margin: 20px 20px 20px 20px;
 }
-.box5 {
-  	display:inline-block;
-    text-align:center;
-  	background:gray;
-  	height:100px;
-  	width:150px;
-  	padding:  ;
-  	margin: 20px 40px 30px 20px;
-  	border: 10px solid black;
-}
-.box6 {
-  	display: block;
-    text-align:center;
-  	background:gray;
-  	height:100px;
-  	width:150px;
-  	padding:  ;
-  	margin: 20px 20px 0px 40px;
-  	border: 10px solid black;
-  }
-  .container3 {
 
-  	background:;
-	height:150px;
-	width: 300px
-	padding:0px ;
-  	margin:0px 500px 20px 500px;
-	border: 2px solid black;
+      /*middle boxes*/
 
-  }
+.midlebox {
+  border: 5px solid black;
+}
 
-  .box7 {
-  	display:inline-block;
-    text-align:center;
-  	background:gray;
-  	height:80px;
-  	width:120px;
-  	padding:  ;
-  	margin: 20px 40px 30px 40px;
-  	border: 10px solid black;
+      /*bottom boxes*/
+
+
+  .borderbox1 {
+    box-sizing: border-box;
+    border: 5px solid black;
 }
-.box8 {
-  	display:inline-block;
-    text-align:center;
-  	background:gray;
-  	height:80px;
-  	width:120px;
-  	padding:  ;
-  	margin: 20px 40px 30px 20px;
-  	border: 10px solid black;
+
+       /*section 2*/
+
+/*
+.sec2 {
+  height:300px;
+  width: 600px;
+  margin-bottom: 20px;
+}*/
+
+    /*midle boxes*/
+
+
+
+
+
+      /*headers and hr*/
+
+
+
+hr {
+  margin-top: 20px;
+  width: 580px;
+  line-height: 2px;
 }
-.box9 {
-  	display:inline-block;
-    text-align:center;
-  	background:gray;
-  	height:80px;
-  	width:120px;
-  	padding:  ;
-  	margin: 20px 40px 30px 20px;
-  	border: 10px solid black;
-  }
+
+.headers {
+  padding: 20px 0;
+}
