--- a/assignments/assets/style/day4lay5.css
+++ b/assignments/assets/style/day4lay5.css
@@ -1,54 +1,99 @@
+/* http://meyerweb.com/eric/tools/css/reset/ 2. v2.0 | 20110126
+  License: none (public domain)
+*/
+
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure,
+footer, header, hgroup, menu, nav, section {
+  display: block;
+}
+body {
+  line-height: 1;
+}
+ol, ul {
+  list-style: none;
+}
+blockquote, q {
+  quotes: none;
+}
+
+blockquote:before, blockquote:after,
+q:before, q:after {
+  content: '';
+  content: none;
+}
+
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+		
+		/*main page */
+
+
 .page {
-	margin: 0 auto;
+	margin: 10px auto;
 	height: 900px;
 	width: 1600px;
 	background-color: white;
 }
+
+		/*header section*/
+
 .head {
+	position: static;
 	display: inline-block;
-	height: 100px;
 	width: 1600px;
 	background-color: cyan;
-	color: blue;
+	color: white;
 	font-size: 30px;
-	text-align: left;
+	text-align: center;
 }
-.about {
-	margin-top: 30px;
-	margin-left: 250px;
-	display: inline-block;
-	height: 100px;
-	width: 300px;
+
+		/*navigation links*/
+
+.navitems {
+	padding: 30px 0px;
+	float: left;
+	width: 25%;
 }
-.port {
-	display: inline-block;
-	height: 100px;
-	width: 300px;
+.links {
+	text-decoration: none;
+	color: white;
+	font-weight: bold;
 }
-.port {
-	display: inline-block;
-	height: 100px;
-	width: 300px;
-}
-.gallery {
-	margin:;
-	display: inline-block;
-	height: 100px;
-	width: 300px;
-}
-.contact {
-	display: inline-block;
-	height: 100px;
-	width: 300px;
-}
+
+		/*paragraph*/
+
 .text {
 	text-align: center;
 	font-size: 20px;
-	margin-left: 300px;
-	margin-top: 50px;
-	margin-right: 300px;
+	margin:20px 250px;
 	color: red;
 }
+
+		/*floating images*/
+
 img {
 	margin-left: 240px;
 	height: 100px;
