--- a/10_days_assignment/day5/assignment1/assets/style/day5lay1.css
+++ b/10_days_assignment/day5/assignment1/assets/style/day5lay1.css
@@ -1,31 +1,90 @@
+/*css reset*/
+
+/* http://meyerweb.com/eric/tools/css/reset/ 2. v2.0 | 20110126
+  License: none (public domain)
+*/
+
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure,
+footer, header, hgroup, menu, nav, section {
+  display: block;
+}
+body {
+  line-height: 1;
+}
+ol, ul {
+  list-style: none;
+}
+blockquote, q {
+  quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+  content: '';
+  content: none;
+}
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+
+	/*main section*/
+
 .page {
+	font-family: serif;
 	margin: 0 auto;
 	height: 900px;
 	width: 1000px;
 	background-color: #17202A;
 }
+
 .text {
-	padding-top: 20px;
-	margin-left: 150px;
-	margin-right: 150px;
-	margin-bottom: 20px;
+	padding: 20px 150px;
 }
+
 .p1 {
-	margin-top: 0px;
 	float: left;
 	color: red;
 }
+
 .p2 {
-	margin-top: 0px;
 	float: right;
 	color: white;
 }
-h1 {
-	margin-top: 50px;
+
+.floats {
+	padding: 50px 0;
+}
+
+.header {
+	padding: 20px 0;
 	color: white;
 	font-size: 40px;
+	text-shadow: 3px 3px 2px black;
 }
+
 p {
-	clear: both;
-	color: white;
+	font-family: sans-serif;
+	padding: 10px 0;
+	color: #7F8C8D;
 }
