--- a/10_days_assignment/box model/layout5/assets/stylesheets/main.css
+++ b/10_days_assignment/box model/layout5/assets/stylesheets/main.css
@@ -1,6 +1,5 @@
 /*css reset*/
 
-
 /* http://meyerweb.com/eric/tools/css/reset/ 2. v2.0 | 20110126
   License: none (public domain)
 */
@@ -50,135 +49,112 @@ table {
 }
 
 
-/*main css*/
+/*main*/
 
-*,*:before,*:after {
+/*border box*/
+
+*,*:before,*:after{
   box-sizing: border-box;
 }
 
-/*header*/
-
 body {
-  margin: 0 auto;
-  width: 80%;
-  padding: 0px 80px;
   font-family: sans-serif;
-  color: #536060;
+  margin: 0 auto;
 }
-.head{
-  display: inline-block;
-  width: 100%; 
-  background-color: white;
-  z-index: 100;
-  padding: 20px 0;
-  text-transform: capitalize;
+
+/*header*/
+.header {
+  margin: 0 auto;
+  text-align: left;
+  padding: 20px 0 40px 20px;
+  width: 90%;
+  border-radius: 10px;
+
 }
 
 h1 {
-  font-size: 40px;
-  color: #324040;
+   font-size: 50px;
 }
+
 h2 {
-  color: #1A2020;
   font-size: 30px;
-}
-h3 {
-  font-size: 20px;
-}
-h5 {
-  padding: 80px 0;
-}
-
-hr {
-  width: 70%;
-  z-index: 100;
-  top: 21%;
-  left: 15%;
-}
-
-.fixed {
-  z-index: 10;
-  position: fixed;
-}
-
-/*main section*/
-
-.clearfix{
   padding: 20px 0;
-}
-
-/*clearfix*/
-
-
-.clearfix:before,.clearfix:after {
-  content: "";
-  display: table;
-}
-.clearfix:after {
-  clear: both;
-}
-.clearfix {
-  *zoom:1;
-}
-
-/*unorderd list*/
-.navs {
-  padding: 10px 0 15px 10px;
-}
-
-ul {
-  margin-left: 20px;
-  list-style: circle;
-}
-
-.links {
-  text-transform: capitalize;
-  list-style: circle;
-  list-style-type: circle;
-  display: inline-block;
-  padding: 10px 0;
-  color: skyblue;
-}
-
-.floats {
-  float: left;
 }
 
 /*left navigation bar*/
 
-aside{
-  background-color: #EAEEEE;
+
+ul {
+  list-style: circle;
 }
+
 .leftnav {
-  width: 20%;
-  height: 550px;
-  left: 15%;
-  top: 26%;
- }
-
-/*right bar*/
-
-.rightbar {
-  margin: 18% 10% 0 31%;
-  width: 67%;
-
+  text-align: left;
+  float: left;
+  margin:0 100px 0 80px;
 }
-.headart {
-  padding: 10px 0 20px 0;
+
+.links {
+  display: inline-block;
+  margin: 10px 0;
+  color: skyblue;
+  font-size: 20px;
+}
+
+
+/*right top paragraph*/
+
+.para {
+  padding: 50px 0 0 0;
+  width: 66%;
+  margin-left: 28%;
+}
+
+
+/*right float section*/
+
+
+.section {
+  padding: 20px;
+  vertical-align: top;
+  display: inline-block;
+}
+.box {
+  padding: 10px 20px;
+  border-radius: 10px;
+  margin: 20px 0 20px 105px;
+  float: left;
+  width: 300px;
+  height: 550px;
+  background-color: #EAEEEE;
 }
 
 p {
-  line-height: 1.3;
-  padding: 10px 0;
+  font-size: 20px;
+  text-align: left;
 }
 
-/*footer*/
+
+/*claerfix */
+
+
+.cf:before,
+.cf:after {
+  content: "";
+  display: table;
+}
+.cf:after {
+  clear: both;
+}
+.cf {
+  clear: both;
+  *zoom:1;
+}
+
+
+/*footer section*/
+
 
 footer {
-  background-color: #353B3B;
-  padding: 10px 0 20px 10px;
-  color: white;
-  width: 80%;
-  bottom: 0;
-  left: 10;
+  background-color: gray;
 }
