--- a/10_days_assignment/box model/layout5/assets/stylesheets/main.css
+++ b/10_days_assignment/box model/layout5/assets/stylesheets/main.css
@@ -122,7 +122,7 @@ ul {
 .box {
   padding: 10px 20px;
   border-radius: 10px;
-  margin: 20px 0 20px 105px;
+  margin: 20px 0 20px 107px;
   float: left;
   width: 300px;
   height: 550px;
@@ -130,7 +130,8 @@ ul {
 }
 
 p {
-  font-size: 20px;
+  font-size: 18px;
+  line-height: 1.4;
   text-align: left;
 }
 
