--- a/10_days_assignment/box model/layout8/assets/stylsheets/main.css
+++ b/10_days_assignment/box model/layout8/assets/stylsheets/main.css
@@ -69,7 +69,7 @@ body {
 h1 {
 	letter-spacing: 2px;
 	color: #EFF3F3;
-	margin:0 200px 0 200px;
+	padding: 0 100px 0 0;
 	vertical-align: middle;
 	font-size: 40px;
 	display: inline-block;
@@ -90,16 +90,24 @@ h1 {
  	color: silver;
  }
 
+ .green {
+ 	background-color: green;
+ }
+
 
 /*navigation links*/
 
+nav {
+	/*margin: 0 auto;*/
+	text-align: center;
+}
 
 .links {
 	color: silver;
 	display: inline-block;
 	text-decoration: none;
 	padding: 10px 10px;
-	margin-left: 60px;
+	margin: 0 30px;
 }
 
 .links:hover {
@@ -144,6 +152,12 @@ img {
 .icons {
 	margin-top: 30px;
 }
+i {
+	padding: 20px 0;
+  color: #384040;
+  font-size: 30px;
+ }
+
 
  /*all buttons section */
 
@@ -221,8 +235,3 @@ footer {
 	color: silver;
 	background-color: #2F3333;
 }
-i {
-	padding: 20px 0;
-  color: #384040;
-  font-size: 30px;
- }
