--- a/10_days_assignment/box model/layout12/assets/stylesheet/layout12.css
+++ b/10_days_assignment/box model/layout12/assets/stylesheet/layout12.css
@@ -105,6 +105,7 @@ body {
 .logo i {
 	margin:0 20px 0 50px;
 }
+
 .navbar {
 	margin-left: 0;
 	width:600px; 
@@ -114,7 +115,8 @@ body {
 
 /*section2*/
 .section2 {
-	background-color: #f3f3f3;
+	padding: 30px 0;
+	background: #f3f3f3;
 }
 
 .paraclr strong {
@@ -140,6 +142,7 @@ body {
 }
 .textbox {
  display: inline-block;
+ margin: 0 40px;
 }
 .h2 {
 	font-size: 26px;
@@ -148,15 +151,21 @@ body {
 }
 .para2 {
 	width: 280px;
-	margin: 20px 5px;
+	margin: 20px 10px;
 }
 .btn {
-	margin-left:25%;
+	border:0;
 	text-align: center;
 	background-color: #16a085;
+	font-size: 16px;
+	color: #fff;
 }
 .clrbox {
 	padding: 50px 0;
+}
+.bluebox img {
+	height: 200px;
+	width: 300px;
 }
 .bluebox {
 	margin: 0 0 40px 10px;
@@ -175,6 +184,10 @@ body {
 	margin: 0;
 }
 
+
+/*section3*/
+
+
 .section3 {
 	background-color: #fff;
 }
@@ -191,14 +204,28 @@ body {
 }
 .icons i {
 	margin: 30px 0 0 0 ;
+	color: white;
 }
+
+/*section4*/
+
+
 .section4 {
 	padding: 80px 0;
 }
-.section4 figure {
+.section5 {
+	background-color: #f3f3f3;
+	padding: 40px 0;
+}
+.section5 figure {
 	text-align: center;
 	margin: 30px 0;
 }
+
+
+/*		footer 		*/
+
+
 .footericon {
 	display: inline-block;
 	height: 40px;
@@ -208,7 +235,7 @@ body {
 	color: white; 
 }
 .foot {
-	margin: 5px 0 0 0 ;
+	margin: 7px 0 0 0 ;
 	font-size: 25px;
 	color: white;
 }
