add bottom left-rgt-mid sec top-btm padding

--- a/10_days_assignment/templated.co/layout-2/assets/stylesheet/main.css
+++ b/10_days_assignment/templated.co/layout-2/assets/stylesheet/main.css
@@ -373,6 +373,7 @@ p {
 }
 
 .btm-left-sec, .btm-mid-sec {
+  padding: 40px 0;
   vertical-align: top;
   width: 50%;
 }
@@ -383,11 +384,11 @@ p {
 
 .bottom-sec {
   width: 100%;
-  /*margin-top: 80px;*/
   position: relative;
 }
 
 .btm-right-sec {
+  padding: 40px 0;
   position: absolute;
   top: 0;
   right: 60px;
