--- a/10_days_assignment/templated.co/layout-2/assets/stylesheet/main.css
+++ b/10_days_assignment/templated.co/layout-2/assets/stylesheet/main.css
@@ -428,6 +428,18 @@ a {
   padding: 20px 0;
 }
 
+ .names {
+  font-weight: 600;
+  font-size: 18px;
+  color: #666;
+}
+
+.name-details {
+  text-align: left;
+  vertical-align: middle;
+  padding-left: 20px;
+}
+
 
 /*    bottom-right-section    */
 
@@ -467,6 +479,6 @@ a {
 
 .footer small {
   display: block;
-  padding: 50px 0;
+  padding: 60px 0;
   border-top: 1px solid rgba(136,136,136,.3);
 }
