--- a/10_days_assignment/templated.co/layout-2/assets/stylesheet/main.css
+++ b/10_days_assignment/templated.co/layout-2/assets/stylesheet/main.css
@@ -24,7 +24,6 @@ time, mark, audio, video {
   font: inherit;
   vertical-align: baseline;
 }
-/* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
   display: block;
@@ -60,7 +59,9 @@ body {
   background-color: #f3f3f3;
   color: #888;
   font-family: 'Source Sans Pro', sans-serif;
+  /*all:unset;*/
 }
+
 
 .page {
   margin-top: 164px;
