add ren folder cat 1 to cat1

--- a/10_days_assignment/templated.co/layout-2/assets/stylesheet/main.css
+++ b/10_days_assignment/templated.co/layout-2/assets/stylesheet/main.css
@@ -407,7 +407,7 @@ a {
 }
 
 .btm-left-sec, .btm-mid-sec {
-  padding: 40px 0;
+  padding: 40px 0 40px 50px;
   vertical-align: top;
   width: 50%;
 }
