--- a/10_days_assignment/style-conference/assets/stylesheets/main.css
+++ b/10_days_assignment/style-conference/assets/stylesheets/main.css
@@ -1,6 +1,7 @@
 /*    css reset     */
 
 
+
 /* http://meyerweb.com/eric/tools/css/reset/
    v2.0 | 20110126
    License: none (public domain)
@@ -51,14 +52,13 @@ table {
 }
 
 
-/*    general css   */
-
+  /*    Custom styles     */
 
 
 body {
   background: #293f50;
   color: #888;
-  font: 300 16px/22px "Lato", "Open Sans", sans-serif;
+  font: 400 16px/22px "Lato", "Open Sans", sans-serif;
 }
 
 
@@ -106,24 +106,27 @@ body {
 }
 
 
+
   /*    Clearfix    */
 
 
-.cf:before,
-.cf:after {
+
+.group:before,
+.group:after {
   content: "";
   display: table;
 }
-.cf:after {
+.group:after {
   clear: both;
 }
-.cf {
+.group {
   clear: both;
   *zoom: 1;
 }
 
 
   /*    Rows    */
+
 
 
 .row,
@@ -191,8 +194,10 @@ em {
 }
 
 
+
   /*    Leads     */
- 
+
+
 
 .lead {
   text-align: center;
@@ -204,7 +209,9 @@ em {
 }
 
 
+
   /*    Links     */
+
 
 
 a {
@@ -234,6 +241,7 @@ p a {
   /*    Buttons     */
 
 
+
 .btn {
   border-radius: 5px;
   color: #fff;
@@ -243,6 +251,17 @@ p a {
   letter-spacing: .5px;
   margin: 0;
   text-transform: uppercase;
+}
+
+.btn-default {
+  border: 0;
+  background: #648880;
+  padding: 11px 30px;
+  font-size: 14px;
+}
+
+.btn-default:hover {
+  background: #77a198;
 }
 
 .btn-alt {
@@ -256,14 +275,16 @@ p a {
 }
 
 
+
   /*    Primary header    */
+
 
 
 .logo {
   border-top: 4px solid #648880;
   float: left;
   font-size: 48px;
-  font-weight: 400;
+  font-weight: 100;
   letter-spacing: .5px;
   line-height: 44px;
   padding: 40px 0 22px 0;
@@ -283,7 +304,9 @@ p a {
 }
 
 
+
   /*    Primary footer    */
+  
 
 
 .primary-footer {
@@ -299,7 +322,9 @@ p a {
 }
 
 
+
   /*    Navigation    */
+
 
 
 .nav {
@@ -317,7 +342,9 @@ p a {
 }
 
 
+
   /*    Home    */
+
 
 
 .hero {
@@ -340,8 +367,17 @@ p a {
   color: #a9b2b9;
 }
 
+.teaser img {
+  border-radius: 5px;
+  display: block;
+  margin-bottom: 22px;
+  max-width: 100%
+}
+
+
 
   /*    Speakers    */
+ 
 
 
 .speaker {
@@ -352,6 +388,159 @@ p a {
   border: 1px solid #dfe2e5;
   border-radius: 5px;
   margin-top: 88px;
-  padding: 22px 0;
+  padding-bottom: 22px;
   text-align: center;
+}
+
+.speaker-info img {
+  border-radius: 50%;
+  height: 130px;
+  margin: -66px 0 22px 0;
+  vertical-align: top;
+}
+
+
+
+  /*    Schedule    */
+
+
+
+table {
+  margin-bottom: 44px;
+  width: 100%;
+}
+
+table:last-child {
+  margin-bottom: 0;
+}
+
+th,
+td {
+  padding-bottom: 22px;
+  vertical-align: top;
+}
+
+th {
+  padding-right: 45px;
+  text-align: right;
+  width: 20%;
+}
+
+td {
+  width: 40%;
+}
+
+thead {
+  line-height: 44px;
+}
+
+thead th {
+  color: #648880;
+  font-size: 24px;
+}
+
+tbody th {
+  color: #a9b2b9;
+  font-size: 14px;
+  font-weight: 400;
+  padding-top: 22px;
+  text-transform: uppercase;
+}
+
+tbody td {
+  border-top: 1px solid #dfe2e5;
+  padding-top: 21px;
+}
+
+tbody td:first-of-type {
+  padding-right: 15px;
+}
+tbody td:last-of-type {
+  padding-left: 15px;
+}
+
+tbody td:only-of-type {
+  padding-left: 0;
+  padding-right: 0;
+}
+
+table a {
+  color: #888;
+}
+
+table h4 {
+  margin-bottom: 0;
+}
+
+.schedule-offset {
+  color: #a9b2b9;
+}
+
+
+  /*    Venue     */
+
+
+
+.venue-theatre {
+  margin-bottom: 66px;
+}
+
+.venue-hotel {
+  margin-bottom: 22px;
+}
+
+.venue-map {
+  height: 264px;
+}
+
+
+
+  /*    Register    */
+
+
+
+.why-attend {
+  list-style: square;
+  margin: 0 0 22px 30px;
+}
+
+form {
+  margin-bottom: 22px;
+}
+
+input,
+select,
+textarea {
+  font: 300 16px/22px "Lato", "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+
+.register-group label {
+  color: #648880;
+  cursor: pointer;
+  font-weight: 400;
+}
+
+.register-group input,
+.register-group select,
+.register-group textarea {
+  border: 1px solid #c6c9cc;
+  border-radius: 5px;
+  color: #888;
+  display: block;
+  margin: 5px 0 27px 0;
+  padding: 5px 8px;
+}
+
+.register-group input,
+.register-group textarea {
+  width: 100%;
+}
+
+.register-group select {
+  height: 34px;
+  width: 60px;
+}
+
+.register-group textarea {
+  height: 78px;
 }
