--- a/10_days_assignment/media-and-forms/assets/stylesheet/main.css
+++ b/10_days_assignment/media-and-forms/assets/stylesheet/main.css
@@ -218,6 +218,7 @@ input {
 ::-webkit-input-placeholder, ::-webkit-textarea-placeholder {
   text-transform: capitalize;
   font-size: 16px;
+  padding-left: 10px;
 }
 
 .button {
